@@ -1715,6 +1715,9 @@ $capture
 $locator
 [1] FALSE
 
+$events
+character(0)
+
 > 
 > 
 > 
