@@ -469,7 +469,8 @@
       \item There is a new function \code{dev.capabilities()} to query
       the capabilities of the current device.  The initial set of
       capabilities are support for (semi-)transparent colours, raster
-      images, image capture and the locator.
+      images, image capture, the locator and support for interactive
+      events.
       
       \item For \code{pdf()}, \code{maxRasters} is increased as needed.
       
